# nove_aguas

./: CMakeLists.txt  README.md
src/: AppWindow.cpp  AppWindow.h  ProgressWidget.cpp  ProgressWidget.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
